--- a/.pipelines/onebranch.buddy.yml
+++ b/.pipelines/onebranch.buddy.yml
@@ -1,4 +1,6 @@
-trigger: none
+trigger:
+  branch:
+    - pipeline
 pr: none
 
 variables:
@@ -9,10 +11,9 @@ resources:
   repositories:
     - repository: docs
       type: github
+      endpoint: Monaco
       name: microsoft/vscode-docs
       ref: pipeline
-      trigger:
-      - pipeline
     - repository: website
       type: github
       endpoint: Monaco
